--- a/app/package.json
+++ b/app/package.json
@@ -1,41 +1,46 @@
 {
-  "name": "typesense-remix-workers",
+  "name": "nike",
   "private": true,
-  "sideEffects":false,
+  "description": "All-in-one remix starter template for Cloudflare Pages",
+  "sideEffects": false,
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "deploy": "wrangler pages deploy ./build/client ",
+    "cleanup": "rimraf .cache ./build",
+    "deploy": "wrangler deploy",
     "dev": "remix vite:dev",
+    "format": "prettier --write .",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "wrangler pages dev ./build/client --node-compat",
-    "typecheck": "tsc",
+    "prepare": "husky",
+    "start": "wrangler dev",
+    "test": "playwright test --ui",
+    "typecheck": "wrangler types && tsc",
     "typegen": "wrangler types"
+  },
+  "lint-staged": {
+    "*.{js,mjs,ts,tsx,css,md,yml}": "prettier --write"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.0",
     "@mui/material": "^6.2.0",
-    "@remix-run/cloudflare": "^2.15.2",
-    "@remix-run/cloudflare-pages": "^2.15.2",
+    "@remix-run/cloudflare": "^2.12.1",
+    "@remix-run/cloudflare-pages": "^2.12.1",
     "@remix-run/react": "^2.15.2",
     "algoliasearch": "^4.24.0",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "cookie": "^1.0.2",
-    "crypto-browserify": "^3.12.1",
-    "date-fns": "^4.1.0",
-    "force": "^0.0.3",
     "framer-motion": "^11.13.1",
     "instantsearch.js": "^4.75.6",
     "isbot": "^4.1.0",
     "leaflet": "^1.9.4",
     "node-fetch": "^3.3.2",
     "qrcode.react": "^4.2.0",
-    "react": "^18.2.0",
+    "react": "^18.0.0",
     "react-compound-slider": "^3.4.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
     "react-instantsearch": "^7.13.9",
     "react-instantsearch-dom": "^6.40.4",
@@ -43,44 +48,41 @@
     "react-select": "^5.8.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
-    "slick-carousel": "^1.8.1",
-    "stream-browserify": "^3.0.0"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240512.0",
+    "@cloudflare/workers-types": "^4.20240925.0",
     "@octokit/types": "^13.6.0",
     "@playwright/test": "^1.47.2",
-    "@remix-run/dev": "^2.15.2",
+    "@remix-run/dev": "^2.12.1",
     "@remix-run/eslint-config": "^2.12.1",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.38.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "msw": "^2.4.9",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "3.57.1"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8",
+    "vite-tsconfig-paths": "^4.3.2",
+    "wrangler": "^3.78.12"
   },
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20"
   }
 }
