--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typesense-remix-workers",
   "private": true,
-  "sideEffects":false,
+  "sideEffects": false,
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
@@ -32,6 +32,7 @@
     "isbot": "^4.1.0",
     "leaflet": "^1.9.4",
     "node-fetch": "^3.3.2",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-compound-slider": "^3.4.0",
@@ -77,6 +78,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-tsconfig-paths": "^4.2.1",
     "wrangler": "3.57.1"
   },
